--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   db:
-    image: postgres:13
+    image: postgres:15.3
     restart: always
     environment:
       POSTGRES_USER: admin
@@ -10,9 +10,11 @@ services:
       POSTGRES_DB: carepulse
     ports:
       - '5432:5432'
+    volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
   pgadmin:
-    image: dpage/pgadmin4
+    image: dpage/pgadmin4:7.5
     restart: always
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@example.com
